deploy: 40c2d15338c4fb4d4a95d083092b1fea85a7125c

--- a/search.html
+++ b/search.html
@@ -199,7 +199,7 @@
     <div class="container">
       <p>
         
-          By Rahul Saraf<br/>
+          By Vineeth Krishna M<br/>
         
             &copy; Copyright 2020.<br/>
       </p>
