--- a/genindex.html
+++ b/genindex.html
@@ -180,7 +180,7 @@
     <div class="container">
       <p>
         
-          By Rahul Saraf<br/>
+          By Vineeth Krishna M<br/>
         
             &copy; Copyright 2020.<br/>
       </p>
